--- a/Web/NbuReservationSystem.Web/NbuReservationSystem.Web.csproj
+++ b/Web/NbuReservationSystem.Web/NbuReservationSystem.Web.csproj
@@ -317,6 +317,7 @@
     <Content Include="Views\Reservations\_CalendarHeader.cshtml" />
     <Content Include="Views\Reservations\_DayTab.cshtml" />
     <Content Include="Views\Reservations\New.cshtml" />
+    <Content Include="Views\Reservations\_WeeksInMonth.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Areas\Administration\Models\" />
