--- a/Web/NbuReservationSystem.Web/NbuReservationSystem.Web.csproj
+++ b/Web/NbuReservationSystem.Web/NbuReservationSystem.Web.csproj
@@ -352,10 +352,6 @@
       <Project>{701F322F-AA01-4DDC-90B6-6935981C1E73}</Project>
       <Name>NbuReservationSystem.Common</Name>
     </ProjectReference>
-    <ProjectReference Include="..\NbuReservationSystem.Web.ViewModels\NbuReservationSystem.Web.ViewModels.csproj">
-      <Project>{812a10fd-47d8-4b59-88b3-ec3665bd89fe}</Project>
-      <Name>NbuReservationSystem.Web.ViewModels</Name>
-    </ProjectReference>
     <ProjectReference Include="..\..\Services\NbuReservationSystem.Services.Data\NbuReservationSystem.Services.Data.csproj">
       <Project>{90fe4c4d-122a-406d-8a40-79c561fb8184}</Project>
       <Name>NbuReservationSystem.Services.Data</Name>
@@ -367,6 +363,10 @@
     <ProjectReference Include="..\NbuReservationSystem.Web.Infrastructure\NbuReservationSystem.Web.Infrastructure.csproj">
       <Project>{6813dc53-5eee-4507-8604-5301ee51a0d3}</Project>
       <Name>NbuReservationSystem.Web.Infrastructure</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\NbuReservationSystem.Web.Models\NbuReservationSystem.Web.Models.csproj">
+      <Project>{812a10fd-47d8-4b59-88b3-ec3665bd89fe}</Project>
+      <Name>NbuReservationSystem.Web.Models</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
