--- a/Web/NbuReservationSystem.Web/packages.config
+++ b/Web/NbuReservationSystem.Web/packages.config
@@ -4,6 +4,8 @@
   <package id="Autofac" version="3.5.2" targetFramework="net46" />
   <package id="Autofac.Mvc5" version="3.3.4" targetFramework="net46" />
   <package id="AutoMapper" version="4.2.0" targetFramework="net46" />
+  <package id="bootstrap.less" version="3.3.5" targetFramework="net46" />
+  <package id="dotless" version="1.5.2" targetFramework="net46" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net46" />
   <package id="Glimpse" version="1.8.6" targetFramework="net46" />
   <package id="Glimpse.Ado" version="1.7.3" targetFramework="net46" />
@@ -30,7 +32,9 @@
   <package id="Microsoft.Owin.Security.Facebook" version="3.0.1" targetFramework="net46" />
   <package id="Microsoft.Owin.Security.OAuth" version="3.0.1" targetFramework="net46" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net46" />
+  <package id="Moment.js" version="2.17.1" targetFramework="net46" />
   <package id="Newtonsoft.Json" version="8.0.2" targetFramework="net46" />
   <package id="Owin" version="1.0" targetFramework="net46" />
+  <package id="routedebugger" version="2.1.5" targetFramework="net46" />
   <package id="WebGrease" version="1.6.0" targetFramework="net46" />
 </packages>
