--- a/Tests/NbuReservationSystem.Services.Web.Tests/NbuReservationSystem.Services.Web.Tests.csproj
+++ b/Tests/NbuReservationSystem.Services.Web.Tests/NbuReservationSystem.Services.Web.Tests.csproj
@@ -54,15 +54,21 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CalendarProviderTests.cs">
+    <Compile Include="Builders\CalculateDatesTestDataBuilder.cs" />
+    <Compile Include="CalendarServiceTests.cs">
       <ExcludeFromStyleCop>False</ExcludeFromStyleCop>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TestData\CalculateDatesTestData.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\Services\NbuReservationSystem.Services.Web\NbuReservationSystem.Services.Web.csproj">
       <Project>{deab17a2-58c1-448c-8a66-d49c3af7fc6c}</Project>
       <Name>NbuReservationSystem.Services.Web</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\Web\NbuReservationSystem.Web.Models\NbuReservationSystem.Web.Models.csproj">
+      <Project>{812A10FD-47D8-4B59-88B3-EC3665BD89FE}</Project>
+      <Name>NbuReservationSystem.Web.Models</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
