--- a/Tests/NbuReservationSystem.Services.Web.Tests/NbuReservationSystem.Services.Web.Tests.csproj
+++ b/Tests/NbuReservationSystem.Services.Web.Tests/NbuReservationSystem.Services.Web.Tests.csproj
@@ -34,6 +34,10 @@
     <CodeAnalysisRuleSet>..\..\Rules.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="NbuReservationSystem.Web.Infrastructure, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\Web\NbuReservationSystem.Web\Bin\NbuReservationSystem.Web.Infrastructure.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="xunit.abstractions, Version=2.0.0.0, Culture=neutral, PublicKeyToken=8d05b1bb7a6fdb6c, processorArchitecture=MSIL">
