Route /Reservations/Monthly was renamed to /Reservations

--- a/Web/NbuReservationSystem.Web/NbuReservationSystem.Web.csproj
+++ b/Web/NbuReservationSystem.Web/NbuReservationSystem.Web.csproj
@@ -341,7 +341,7 @@
     <Content Include="Views\Manage\VerifyPhoneNumber.cshtml" />
     <Content Include="Views\Shared\Lockout.cshtml" />
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
-    <Content Include="Views\Reservations\Monthly.cshtml" />
+    <Content Include="Views\Reservations\Index.cshtml" />
     <Content Include="Views\Reservations\_CalendarHeader.cshtml" />
     <Content Include="Views\Reservations\_DayTab.cshtml" />
     <Content Include="Views\Reservations\New.cshtml" />
