Added basic admin table which shows all reservations

--- a/Web/NbuReservationSystem.Web.Models/NbuReservationSystem.Web.Models.csproj
+++ b/Web/NbuReservationSystem.Web.Models/NbuReservationSystem.Web.Models.csproj
@@ -58,6 +58,7 @@
     <Compile Include="Responses\Reservations\MonthlyReservationsViewModel.cs" />
     <Compile Include="Requests\Reservations\RepetitionPolicy.cs" />
     <Compile Include="Requests\Reservations\WeekViewModel.cs" />
+    <Compile Include="Responses\Reservations\ReservationsAdministrationViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\Data\NbuReservationSystem.Data.Common\NbuReservationSystem.Data.Common.csproj">
