--- a/Data/NbuReservationSystem.Data/packages.config
+++ b/Data/NbuReservationSystem.Data/packages.config
@@ -3,4 +3,5 @@
   <package id="EntityFramework" version="6.1.3" targetFramework="net46" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.2.1" targetFramework="net46" />
   <package id="Microsoft.AspNet.Identity.EntityFramework" version="2.2.1" targetFramework="net46" />
+  <package id="Newtonsoft.Json" version="8.0.2" targetFramework="net46" />
 </packages>
