--- a/Web/NbuReservationSystem.Web/NbuReservationSystem.Web.csproj
+++ b/Web/NbuReservationSystem.Web/NbuReservationSystem.Web.csproj
@@ -272,6 +272,7 @@
     <Compile Include="ViewModels\Manage\VerifyPhoneNumberViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="App_Data\Email.txt" />
     <Content Include="App_Data\ToS.txt" />
     <Content Include="Content\bootstrap-theme.css" />
     <Content Include="Content\bootstrap-theme.min.css" />
