--- a/Web/NbuReservationSystem.Web/Web.config
+++ b/Web/NbuReservationSystem.Web/Web.config
@@ -13,7 +13,10 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
-  <add key="RouteDebugger:Enabled" value="false" /></appSettings>
+    <add key="RouteDebugger:Enabled" value="false" />
+    <add key="Email" value=""/>
+    <add key="Password" value=""/>
+  </appSettings>
   <system.web>
     <authentication mode="None" />
     <globalization culture="auto" uiCulture="auto" />
