Fixed a typo - renamed Organiser to Organizer

--- a/Data/NbuReservationSystem.Data/NbuReservationSystem.Data.csproj
+++ b/Data/NbuReservationSystem.Data/NbuReservationSystem.Data.csproj
@@ -62,6 +62,10 @@
     <Compile Include="Migrations\201701031843401_InitialCreate.Designer.cs">
       <DependentUpon>201701031843401_InitialCreate.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201701081001054_RenamedOrganiserToOrganizer.cs" />
+    <Compile Include="Migrations\201701081001054_RenamedOrganiserToOrganizer.Designer.cs">
+      <DependentUpon>201701081001054_RenamedOrganiserToOrganizer.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -91,6 +95,9 @@
   <ItemGroup>
     <EmbeddedResource Include="Migrations\201701031843401_InitialCreate.resx">
       <DependentUpon>201701031843401_InitialCreate.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201701081001054_RenamedOrganiserToOrganizer.resx">
+      <DependentUpon>201701081001054_RenamedOrganiserToOrganizer.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
