--- a/Data/NbuReservationSystem.Data.Models/NbuReservationSystem.Data.Models.csproj
+++ b/Data/NbuReservationSystem.Data.Models/NbuReservationSystem.Data.Models.csproj
@@ -54,7 +54,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ApplicationUser.cs" />
-    <Compile Include="Organiser.cs" />
+    <Compile Include="Organizer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Reservation.cs" />
   </ItemGroup>
